Show status on event

--- a/flic-button.html
+++ b/flic-button.html
@@ -38,7 +38,7 @@
   </div>
 </script>
 
-<script type="text/x-red" data-help-name="Flic Button">
+<script type="text/html" data-help-name="Flic Button">
   <p>A node to configure a Flic Button</p>
 
   <h3>Parameters</h3>
