--- a/flic.html
+++ b/flic.html
@@ -58,7 +58,7 @@
   </div>
 </script>
 
-<script type="text/x-red" data-help-name="flic">
+<script type="text/html" data-help-name="flic">
   <p>A node to inject events from Flic buttons</p>
 
   <h3>Parameters</h3>
