--- a/flic-button.html
+++ b/flic-button.html
@@ -12,29 +12,16 @@
 -->
 <script type="text/html" data-template-name="Flic Button">
   <div class="form-row">
-      <label for="node-config-input-host"><i class="fa fa-server"></i> Host</label>
-      <input type="text" id="node-config-input-host">
+    <label for="node-config-input-address">Button Address</label>
+    <input type="text" id="node-config-input-address" />
   </div>
   <div class="form-row">
-      <label for="node-config-input-port"><i class="fa fa-plug"></i> Port</label>
-      <input type="text" id="node-config-input-port">
-  </div>
-
-  <div class="form-row">
-      <label for="node-config-input-address">Button Address</label>
-      <input type="text" id="node-config-input-address">
+    <label for="node-config-input-name"><i class="fa fa-id-badge"></i> Name</label>
+    <input type="text" id="node-config-input-name" />
   </div>
   <div class="form-row">
-      <label for="node-config-input-name"><i class="fa fa-id-badge"></i> Name</label>
-      <input type="text" id="node-config-input-name">
-  </div>
-  <div class="form-row">
-      <label for="node-config-input-autodisconnecttime" style="width:35%">Auto-Disconnect Time</label>
-      <input type="text" id="node-config-input-autodisconnecttime" style="width:20%"> seconds
-  </div>
-  <div class="form-row">
-    <label for="node-input-debug"><i class="fa fa-bug"></i> <span>Debug</span></label>
-    <input type="checkbox" id="node-input-debug" style="width: auto; margin: 0;">
+    <label for="node-config-input-autodisconnecttime" style="width:35%">Auto-Disconnect Time</label>
+    <input type="text" id="node-config-input-autodisconnecttime" style="width:20%" /> seconds
   </div>
 </script>
 
@@ -43,12 +30,15 @@
 
   <h3>Parameters</h3>
   <ul>
-    <li><code>Host</code> - Required. IP address or hostname of the flicd server</li>
-    <li><code>Port</code> - Required. Port to use (default 5551)</li>
     <li><code>Button Address</code> - Required. MAC address of the button</li>
-    <li><code>Name</code> - Optional. Name displayed in the flic node button list</li>
-    <li><code>Auto-Disconnect Time</code> - Required. Number of seconds after a click event that the connection to the button should be disconnected. Note: This does not mean the button will not be able to communicate. As soon as the button is pressed, the connection is automatically reconnected. Value can be between 0 and 511. Use 511 to disable this feature and force connection to remain open; but this will significantly decrease button battery life.</li>
-    <li><code>Debug</code> - If enabled, will output debug info to the node-red console.</li>
+    <li><code>Name</code> - Optional. Name displayed in the flic node button list.</li>
+    <li>
+      <code>Auto-Disconnect Time</code> - Required. Number of seconds after a click event that the
+      connection to the button should be disconnected. Note: This does not mean the button will not
+      be able to communicate. As soon as the button is pressed, the connection is automatically
+      reconnected. Value can be between 0 and 511. Use 511 to disable this feature and force
+      connection to remain open; but this will significantly decrease button battery life.
+    </li>
   </ul>
 </script>
 
@@ -58,10 +48,7 @@
     defaults: {
       address: { value: '', required: true },
       name: { value: '' },
-      autodisconnecttime: { value: 15 },
-      host: { value: '127.0.0.1', required: true },
-      port: { value: 5551, required: true },
-      debug: { value: false }
+      autodisconnecttime: { value: 15 }
     },
     label: function () {
       return this.name ? this.name : this.address
